Changed the icons to some of the sections of the menu under Industries, also fixed the sizes and alignments of some elements.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,6 @@ nav {
   z-index: 999;
 }
 nav .logo {
-  z-index: 1;
   background-color: #fff;
 }
 nav .logo a {
@@ -114,9 +113,9 @@ nav .nav_list .nav_item .megamenu .content .megamenu_item .megamenu_link a:hover
   color: #908686;
 }
 nav .nav_list .nav_item .megamenu .content .megamenu_item .megamenu_link p {
-  font-size: 0.6875rem;
+  font-size: 0.8rem;
   font-weight: 400;
-  color: #737373;
+  color: #454545;
 }
 nav .nav_list .nav_item .nav_link {
   font-weight: 500;
